fix(menu): align svg on top of their tag

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,7 +9,7 @@ a {
 }
 
 img, svg {
-    vertical-align: text-top;
+    vertical-align: top;
 }
 
 :focus, button {
